--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "balena-yocto-scripts"]
 	path = balena-yocto-scripts
 	url = https://github.com/balena-os/balena-yocto-scripts.git
+[submodule "layers/meta-freescale"]
+	path = layers/meta-freescale
+	url = git://git.yoctoproject.org/meta-freescale
