--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "layers/meta-openembedded"]
 	path = layers/meta-openembedded
 	url = git://github.com/openembedded/meta-openembedded
+[submodule "layers/meta-resin"]
+	path = layers/meta-resin
+	url = https://github.com/resin-os/meta-resin.git
