--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "layers/meta-variscite-imx"]
 	path = layers/meta-variscite-imx
 	url = https://github.com/varigit/meta-variscite-imx.git
+[submodule "layers/poky"]
+	path = layers/poky
+	url = https://git.yoctoproject.org/git/poky
