layer.conf: Fix error undefined IMAGE_CMD for IMAGE_FSTYPES sdcard
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-resin-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-resin-imx8m-var-dart/conf/layer.conf
@@ -19,3 +19,7 @@ BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser"
 BBMASK .= " .*/layers/meta-fsl-bsp-release/imx/meta-bsp/recipes-multimedia/gstreamer/"
 
 IMAGE_INSTALL_remove = "fsl-rc-local"
+
+# This is necessary to fix the error when parsing
+# recipes: "undefined IMAGE_CMD for IMAGE_FSTYPES sdcard"
+IMAGE_FSTYPES_imx8m-var-dart = " resinos-img"
