--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = https://github.com/varigit/meta-variscite-imx.git
 [submodule "layers/poky"]
 	path = layers/poky
-	url = https://git.yoctoproject.org/git/poky
+	url = https://github.com/balena-os/poky
 [submodule "layers/meta-fsl-bsp-release"]
 	path = layers/meta-fsl-bsp-release
 	url = https://source.codeaurora.org/external/imx/meta-fsl-bsp-release
