--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -3,11 +3,11 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "resin-imx8m-var-dart"
-BBFILE_PATTERN_resin-imx8m-var-dart := "^${LAYERDIR}/"
-BBFILE_PRIORITY_resin-imx8m-var-dart = "1337"
+BBFILE_COLLECTIONS += "balena-imx8m-var-dart"
+BBFILE_PATTERN_balena-imx8m-var-dart := "^${LAYERDIR}/"
+BBFILE_PRIORITY_balena-imx8m-var-dart = "1337"
 
-LAYERSERIES_COMPAT_resin-imx8m-var-dart = "sumo"
+LAYERSERIES_COMPAT_balena-imx8m-var-dart = "sumo"
 
 # Mask recipes which we do not use
 BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
