conf/layer: Update for DART MX8M Mini
Fix various build issues caused by
updating to the HEAD of sumo branch
in vendor BSP layers.

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_PRIORITY_balena-imx8m-var-dart = "1337"
 
 LAYERSERIES_COMPAT_balena-imx8m-var-dart = "sumo"
 
-# Mask recipes which we do not use
+# Mask recipes which we do not use and cause build failure
 BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
 BBMASK .= " .*/meta-freescale/recpes-graphics"
 BBMASK .= " .*/meta-variscite-imx/recipes-core/packagegroup"
@@ -17,9 +17,15 @@ BBMASK .= " .*/meta-freescale/dynamic-layers"
 BBMASK .= " .*/meta-freescale/recipes-multimedia"
 BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser"
 BBMASK .= " .*/layers/meta-fsl-bsp-release/imx/meta-bsp/recipes-multimedia/gstreamer/"
+BBMASK .= " .*/layers/meta-variscite-imx/recipes-fsl/images/var-image-swupdate.bb"
+BBMASK .= " .*/layers/meta-variscite-imx/recipes-fsl/images/fsl-image-gui.bbappend"
+
+# This disables vendor logo on login
+BBMASK .= " .*/layers/meta-variscite-imx/recipes-core/base-files/"
 
 IMAGE_INSTALL_remove = "fsl-rc-local"
 
 # This is necessary to fix the error when parsing
 # recipes: "undefined IMAGE_CMD for IMAGE_FSTYPES sdcard"
-IMAGE_FSTYPES_imx8m-var-dart = " resinos-img"
+IMAGE_FSTYPES_imx8m-var-dart = "resinos-img"
+IMAGE_FSTYPES_imx8mm-var-dart = "resinos-img"
