samples/local.conf: Mention iMX8M Mini device type
Also remove conf notes file from samples. This must
have slipped in before the commit adding the .gitignore
file.

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/samples/local.conf.sample
+++ b/layers/meta-balena-imx8m-var-dart/conf/samples/local.conf.sample
@@ -1,5 +1,6 @@
 # Supported machines
 #MACHINE ?= "imx8m-var-dart"
+#MACHINE ?= "imx8mm-var-dart"
 
 # We use the overlayfs docker storage driver for the imx8m-var-dart machine
 BALENA_STORAGE = "overlay2"
