conf/layer: Fix imx8mm-var-dart BT issues
brcm_patchram_plus communication with the
BT chip encountered issues and stalled
at some point due to agetty using
ttymxc3. This was caused by a commit
in upstream BSP layer that re-used the same
machine for the imx8mm-var-som.

Changelog-entry: conf/layer: Fix imx8mm-var-dart BT issues
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -29,3 +29,10 @@ IMAGE_INSTALL_remove = "fsl-rc-local"
 # recipes: "undefined IMAGE_CMD for IMAGE_FSTYPES sdcard"
 IMAGE_FSTYPES_imx8m-var-dart = "resinos-img"
 IMAGE_FSTYPES_imx8mm-var-dart = "resinos-img"
+
+# When adding imx8mm-var-som, the Variscite layer
+# appended the ttymxc3 serial console to the imx8mm
+# machine conf, see meta-variscite-imx commit 6dc1db0b.
+# On our side, this caused agetty to interfere in the chip's
+# communication with brcm_patchram_plus thus making BT fail.
+SERIAL_CONSOLES_imx8mm-var-dart = "115200;ttymxc0"
