--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8m-var-dart.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8m-var-dart.conf
@@ -4,3 +4,14 @@
 
 MACHINEOVERRIDES = "imx8mq-var-dart:${MACHINE}"
 include conf/machine/imx8mq-var-dart.conf
+
+PREFERRED_VERSION_linux-variscite = "4.14.78"
+
+KERNEL_DEVICETREE = " \
+        freescale/fsl-imx8mq-var-dart-emmc-wifi-hdmi.dtb \
+        freescale/fsl-imx8mq-var-dart-emmc-wifi-lvds.dtb \
+        freescale/fsl-imx8mq-var-dart-emmc-wifi-dual-display.dtb \
+        freescale/fsl-imx8mq-var-dart-sd-emmc-hdmi.dtb \
+        freescale/fsl-imx8mq-var-dart-sd-emmc-lvds.dtb \
+        freescale/fsl-imx8mq-var-dart-sd-emmc-dual-display.dtb \
+"
