--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -7,7 +7,7 @@ BBFILE_COLLECTIONS += "balena-imx8m-var-dart"
 BBFILE_PATTERN_balena-imx8m-var-dart := "^${LAYERDIR}/"
 BBFILE_PRIORITY_balena-imx8m-var-dart = "1337"
 
-LAYERSERIES_COMPAT_balena-imx8m-var-dart = "sumo"
+LAYERSERIES_COMPAT_balena-imx8m-var-dart = "warrior"
 
 # Mask recipes which we do not use and cause build failure
 BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
