conf/layer: Fix build issues on warrior
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -19,6 +19,8 @@ BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser"
 BBMASK .= " .*/layers/meta-fsl-bsp-release/imx/meta-bsp/recipes-multimedia/gstreamer/"
 BBMASK .= " .*/layers/meta-variscite-imx/recipes-fsl/images/var-image-swupdate.bb"
 BBMASK .= " .*/layers/meta-variscite-imx/recipes-fsl/images/fsl-image-gui.bbappend"
+BBMASK .= " .*/layers/meta-fsl-bsp-release/imx/meta-bsp/recipes-connectivity/openssl/openssl_1.1.1b.bbappend"
+BBMASK .= " .*/layers/meta-fsl-bsp-release/imx/meta-bsp/recipes-kernel/linux-firmware/linux-firmware_git.bbappend"
 
 # This disables vendor logo on login
 BBMASK .= " .*/layers/meta-variscite-imx/recipes-core/base-files/"
@@ -36,3 +38,7 @@ IMAGE_FSTYPES_imx8mm-var-dart = "resinos-img"
 # On our side, this caused agetty to interfere in the chip's
 # communication with brcm_patchram_plus thus making BT fail.
 SERIAL_CONSOLES_imx8mm-var-dart = "115200;ttymxc0"
+
+# Fix builds on warrior
+DEFAULTTUNE_mx8 = "aarch64"
+DEFAULTTUNE_mx8mm = "aarch64"
