--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 	path = layers/meta-fsl-bsp-release
 	url = https://source.codeaurora.org/external/imx/meta-fsl-bsp-release
 	branch = imx-morty
+[submodule "layers/meta-laird-cp"]
+	path = layers/meta-laird-cp
+	url = git@github.com:LairdCP/meta-laird-cp.git
