conf/samples: Use meta-laird layer
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/samples/bblayers.conf.sample
+++ b/layers/meta-balena-imx8m-var-dart/conf/samples/bblayers.conf.sample
@@ -17,6 +17,7 @@ BBLAYERS ?= " \
     ${TOPDIR}/../layers/meta-variscite-imx \
     ${TOPDIR}/../layers/meta-balena/meta-balena-common \
     ${TOPDIR}/../layers/meta-balena/meta-balena-warrior \
+    ${TOPDIR}/../layers/meta-laird-cp \
     ${TOPDIR}/../layers/meta-balena-imx8m-var-dart \
     ${TOPDIR}/../layers/meta-rust \
-    "
+"
