conf/machine: Use 4.14.98 var1 kernel for PLT
Addresses the following error:

Atheros 8031 ethernet 30be0000.ethernet-1:00:
  MasterSlave resolution failed,
  maybe conflicting manual settings?
fec 30be0000.ethernet eth0: Link is Down

Changelog-entry: conf/machine: Use 4.14.98 var1 kernel for PLT
Signed-off-by: Alexndru Costache <alexndru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-plt.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-plt.conf
@@ -4,3 +4,5 @@
 
 MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
 include conf/machine/imx8mm-var-dart.conf
+
+PREFERRED_VERSION_linux-variscite = "4.14.98"
