imx8mm-var-dart-plt.conf: Switch to kernel 5.4.3
We upgrade to kernel 5.4.3 to fix Ethernet Gigabit link negociation
errors.

Signed-off-by: Florin Sarbu <florin@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-plt.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-plt.conf
@@ -4,3 +4,11 @@
 
 MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
 include conf/machine/imx8mm-var-dart.conf
+
+PREFERRED_VERSION_linux-variscite = "5.4.3"
+
+KERNEL_DEVICETREE = " \
+        freescale/imx8mm-var-dart.dtb \
+        freescale/imx8mm-var-som.dtb \
+        freescale/imx8mm-var-som-rev10.dtb \
+"
