conf: Update layer compatibility
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -7,7 +7,7 @@ BBFILE_COLLECTIONS += "balena-imx8m-var-dart"
 BBFILE_PATTERN_balena-imx8m-var-dart := "^${LAYERDIR}/"
 BBFILE_PRIORITY_balena-imx8m-var-dart = "1337"
 
-LAYERSERIES_COMPAT_balena-imx8m-var-dart = "warrior"
+LAYERSERIES_COMPAT_balena-imx8m-var-dart = "dunfell"
 
 # Mask recipes which we do not use and cause build failure
 BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
@@ -44,7 +44,7 @@ DEFAULTTUNE_mx8 = "aarch64"
 DEFAULTTUNE_mx8mm = "aarch64"
 
 # we switched only the BSP to zeus so let's fool it we are still on warrior
-LAYERSERIES_COMPAT_variscite-imx = "warrior"
+#LAYERSERIES_COMPAT_variscite-imx = "warrior dunfell"
 
 # we need to remove the following because they require the other layers to be on Zeus (and they are not yet)
 BBMASK += "/meta-variscite-imx/recipes-bsp/firmware-imx/ "
