--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 [submodule "layers/meta-laird-cp"]
 	path = layers/meta-laird-cp
 	url = https://github.com/LairdCP/meta-laird-cp.git
+[submodule "layers/meta-variscite-fslc"]
+	path = layers/meta-variscite-fslc
+	url = https://github.com/varigit/meta-variscite-fslc.git
+	branch = dunfell
