balena-variscite-mx8: Rename resin image types to balena
Rename resin image types to balena and replace RESIN_ env vars

Changelog-entry: Rename resin image types to balena
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -29,8 +29,8 @@ IMAGE_INSTALL_remove = "fsl-rc-local"
 
 # This is necessary to fix the error when parsing
 # recipes: "undefined IMAGE_CMD for IMAGE_FSTYPES sdcard"
-IMAGE_FSTYPES_imx8m-var-dart = "resinos-img"
-IMAGE_FSTYPES_imx8mm-var-dart = "resinos-img"
+IMAGE_FSTYPES_imx8m-var-dart = "balenaos-img"
+IMAGE_FSTYPES_imx8mm-var-dart = "balenaos-img"
 
 # When adding imx8mm-var-som, the Variscite layer
 # appended the ttymxc3 serial console to the imx8mm
