--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8m-var-dart.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8m-var-dart.conf
@@ -6,6 +6,7 @@ MACHINEOVERRIDES = "imx8mq-var-dart:${MACHINE}"
 include conf/machine/imx8mq-var-dart.conf
 
 PREFERRED_VERSION_linux-variscite = "4.14.78"
+PREFERRED_VERSION_firmware-imx = "8.1.1"
 
 KERNEL_DEVICETREE = " \
         freescale/fsl-imx8mq-var-dart-emmc-wifi-hdmi.dtb \
