conf/layer: Switch to Dunfell, preffer 5.4.85+ kernel
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -7,7 +7,7 @@ BBFILE_COLLECTIONS += "balena-imx8m-var-dart"
 BBFILE_PATTERN_balena-imx8m-var-dart := "^${LAYERDIR}/"
 BBFILE_PRIORITY_balena-imx8m-var-dart = "1337"
 
-LAYERSERIES_COMPAT_balena-imx8m-var-dart = "warrior"
+LAYERSERIES_COMPAT_balena-imx8m-var-dart = "warrior dunfell"
 
 # Mask recipes which we do not use and cause build failure
 BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
@@ -38,6 +38,8 @@ IMAGE_FSTYPES_imx8mm-var-dart = "balenaos-img"
 # On our side, this caused agetty to interfere in the chip's
 # communication with brcm_patchram_plus thus making BT fail.
 SERIAL_CONSOLES_imx8mm-var-dart = "115200;ttymxc0"
+
+PREFERRED_VERSION_linux-variscite_imx8mm-var-dart = "5.4.%"
 
 # Fix builds on warrior
 DEFAULTTUNE_mx8 = "aarch64"
