--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-nrt.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-nrt.conf
@@ -6,3 +6,8 @@ MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
 include conf/machine/imx8mm-var-dart.conf
 
 PREFERRED_VERSION_linux-variscite = "4.19.35"
+
+KERNEL_DEVICETREE = " \
+	freescale/fsl-imx8mm-var-dart.dtb \
+	freescale/fsl-imx8mm-var-dart-m4.dtb \
+"
