Add contracts submodule
This is used to build and deploy an OS contract to the fleet.

Changelog-entry: Add contracts submodule
Signed-off-by: Alex Gonzalez <alexg@balena.io>

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "layers/meta-variscite-fslc"]
 	path = layers/meta-variscite-fslc
 	url = https://github.com/varigit/meta-variscite-fslc.git
+[submodule "contracts"]
+	path = contracts
+	url = https://github.com/balena-io/contracts.git
