base-files: Bring in blacklist as we mask Variscite base files recipe
The /etc/issue file should not be empty for the
tests to pass. However, only recipes and recipe
appends can be masked, therefore we bring in the
append from Variscite BSP to include the blacklist
file.

Signed-off-by: Alexandru Costache <alexandru@balena.io>
Changelog-entry: base-files: Remove append, mask Variscite issue file

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -10,12 +10,12 @@ BBFILE_PRIORITY_balena-imx8m-var-dart = "1337"
 LAYERSERIES_COMPAT_balena-imx8m-var-dart = "warrior dunfell"
 
 # Mask recipes which we do not use and cause build failure
-BBMASK .= " .*/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
-BBMASK .= " .*/meta-freescale/recpes-graphics"
-BBMASK .= " .*/meta-variscite-imx/recipes-core/packagegroup"
-BBMASK .= " .*/meta-freescale/dynamic-layers"
-BBMASK .= " .*/meta-freescale/recipes-multimedia"
-
+BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
+BBMASK += "/meta-freescale/recpes-graphics"
+BBMASK += "/meta-variscite-imx/recipes-core/packagegroup"
+BBMASK += "/meta-freescale/dynamic-layers"
+BBMASK += "/meta-freescale/recipes-multimedia"
+BBMASK += "/meta-variscite-fslc/recipes-core/base-files/base-files"
 IMAGE_INSTALL_remove = "fsl-rc-local"
 
 # This is necessary to fix the error when parsing
