conf/layer: Enable firmware compression for imx8m-var-dart
... to save some space

Changelog-entry: conf/layer: Enable firmware compression for imx8m-var-dart
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -32,3 +32,5 @@ SERIAL_CONSOLES_imx8mm-var-dart = "115200;ttymxc0"
 
 PREFERRED_VERSION_linux-variscite_imx8m-var-dart = "5.4.142"
 PREFERRED_VERSION_linux-variscite_imx8mm-var-dart = "5.4.142"
+
+FIRMWARE_COMPRESSION_variscite_imx8m-var-dart ?= "1"
