--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "contracts"]
 	path = contracts
 	url = https://github.com/balena-io/contracts.git
+[submodule "layers/meta-variscite-bsp"]
+	path = layers/meta-variscite-bsp
+	url = https://github.com/varigit/meta-variscite-bsp.git
