conf/layer: Add updates needed for kirkstone
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -7,7 +7,7 @@ BBFILE_COLLECTIONS += "balena-imx8m-var-dart"
 BBFILE_PATTERN_balena-imx8m-var-dart := "^${LAYERDIR}/"
 BBFILE_PRIORITY_balena-imx8m-var-dart = "1337"
 
-LAYERSERIES_COMPAT_balena-imx8m-var-dart = "warrior dunfell"
+LAYERSERIES_COMPAT_balena-imx8m-var-dart = "kirkstone"
 
 # Mask recipes which we do not use and cause build failure
 BBMASK += "/meta-fsl-bsp-release/imx/meta-bsp/recipes-browser "
@@ -15,24 +15,23 @@ BBMASK += "/meta-freescale/recpes-graphics"
 BBMASK += "/meta-variscite-imx/recipes-core/packagegroup"
 BBMASK += "/meta-freescale/dynamic-layers"
 BBMASK += "/meta-freescale/recipes-multimedia"
-BBMASK += "/meta-variscite-fslc/recipes-core/base-files/base-files"
-IMAGE_INSTALL_remove = "fsl-rc-local"
+BBMASK += "/meta-variscite-bsp/recipes-core/base-files/base-files"
+BBMASK += "/meta-variscite-bsp/recipes-connectivity/bluealsa/bluealsa_git.bbappend"
+IMAGE_INSTALL:remove = "fsl-rc-local"
 
 # This is necessary to fix the error when parsing
 # recipes: "undefined IMAGE_CMD for IMAGE_FSTYPES sdcard"
-IMAGE_FSTYPES_imx8m-var-dart = "balenaos-img"
-IMAGE_FSTYPES_imx8mm-var-dart = "balenaos-img"
+IMAGE_FSTYPES:imx8m-var-dart = "balenaos-img"
+IMAGE_FSTYPES:imx8mm-var-dart = "balenaos-img"
 
 # When adding imx8mm-var-som, the Variscite layer
 # appended the ttymxc3 serial console to the imx8mm
 # machine conf, see meta-variscite-imx commit 6dc1db0b.
 # On our side, this caused agetty to interfere in the chip's
 # communication with brcm_patchram_plus thus making BT fail.
-SERIAL_CONSOLES_imx8mm-var-dart = "115200;ttymxc0"
+SERIAL_CONSOLES:imx8mm-var-dart = "115200;ttymxc0"
+SERIAL_CONSOLES:imx8mm-var-som = "115200;ttymxc3"
 
-PREFERRED_VERSION_linux-variscite_imx8m-var-dart = "5.4.142"
-PREFERRED_VERSION_linux-variscite_imx8mm-var-dart = "5.4.142"
-
-FIRMWARE_COMPRESSION_variscite_imx8m-var-dart ?= "1"
+FIRMWARE_COMPRESSION:variscite:imx8m-var-dart ?= "1"
 
 FULL_OPTIMIZATION = "-Os -pipe ${DEBUG_FLAGS}"
