conf/machine: Update syntax in yocto machine
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-som.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-som.conf
@@ -5,4 +5,4 @@
 MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
 include conf/machine/imx8mm-var-dart.inc
 
-SERIAL_CONSOLES_imx8mm-var-som = "115200;ttymxc3"
+SERIAL_CONSOLES:imx8mm-var-som = "115200;ttymxc3"
