conf/layer: enable size optimization flag
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -34,3 +34,5 @@ PREFERRED_VERSION_linux-variscite_imx8m-var-dart = "5.4.142"
 PREFERRED_VERSION_linux-variscite_imx8mm-var-dart = "5.4.142"
 
 FIRMWARE_COMPRESSION_variscite_imx8m-var-dart ?= "1"
+
+FULL_OPTIMIZATION = "-Os -pipe ${DEBUG_FLAGS}"
