--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-nrt.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-nrt.conf
@@ -3,4 +3,4 @@
 ##@DESCRIPTION: Machine configuration for the imx8mm-var-dart-nrt
 
 MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
-include conf/machine/imx8mm-var-dart.conf
+include conf/machine/imx8mm-var-dart.inc
