--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-som.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-som.conf
@@ -3,6 +3,6 @@
 ##@DESCRIPTION: Machine configuration for the imx8mm-var-som
 
 MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
-include conf/machine/imx8mm-var-dart.conf
+include conf/machine/imx8mm-var-dart.inc
 
 SERIAL_CONSOLES_imx8mm-var-som = "115200;ttymxc3"
