conf/layer: update for Kirkstone
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -17,6 +17,7 @@ BBMASK += "/meta-freescale/dynamic-layers"
 BBMASK += "/meta-freescale/recipes-multimedia"
 BBMASK += "/meta-variscite-bsp/recipes-core/base-files/base-files"
 BBMASK += "/meta-variscite-bsp/recipes-connectivity/bluealsa/bluealsa_git.bbappend"
+
 IMAGE_INSTALL:remove = "fsl-rc-local"
 
 # This is necessary to fix the error when parsing
@@ -32,6 +33,6 @@ IMAGE_FSTYPES:imx8mm-var-dart = "balenaos-img"
 SERIAL_CONSOLES:imx8mm-var-dart = "115200;ttymxc0"
 SERIAL_CONSOLES:imx8mm-var-som = "115200;ttymxc3"
 
-FIRMWARE_COMPRESSION:variscite:imx8m-var-dart ?= "1"
-
+FIRMWARE_COMPRESSION:imx8m-var-dart ?= "1"
+FIRMWARE_COMPRESSION:imx8mm-var-dart ?= "1"
 FULL_OPTIMIZATION = "-Os -pipe ${DEBUG_FLAGS}"
