--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -17,6 +17,7 @@ BBMASK += "/meta-freescale/dynamic-layers"
 BBMASK += "/meta-freescale/recipes-multimedia"
 BBMASK += "/meta-variscite-bsp/recipes-core/base-files/base-files"
 BBMASK += "/meta-variscite-bsp/recipes-connectivity/bluealsa/bluealsa_git.bbappend"
+BBMASK += "/meta-openembedded/meta-oe/recipes-kernel/broadcom-bt-firmware/broadcom-bt-firmware_12.0.1.1105_p3.bb"
 
 IMAGE_INSTALL:remove = "fsl-rc-local"
 
