conf/machine: Fix potential interactions with the bluetooth ttymxc3 uart
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/layer.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/layer.conf
@@ -18,7 +18,7 @@ BBMASK += "/meta-freescale/recipes-multimedia"
 BBMASK += "/meta-variscite-bsp/recipes-core/base-files/base-files"
 BBMASK += "/meta-variscite-bsp/recipes-connectivity/bluealsa/bluealsa_git.bbappend"
 BBMASK += "/meta-openembedded/meta-oe/recipes-kernel/broadcom-bt-firmware/broadcom-bt-firmware_12.0.1.1105_p3.bb"
-
+BBMASK += "/meta-variscite-bsp/conf/machine/imx8mm-var-dart.conf"
 IMAGE_INSTALL:remove = "fsl-rc-local"
 
 # This is necessary to fix the error when parsing
