conf/machine: Cleanup machine includes
We unset ROOTFS_SIZE from the balena-image in PR #435
so we can cleanup the machine includes now.

imx8mm-var-dart.inc brought in in this commit
is imx8mm-var-dart.conf from meta-variscite-bsp
at 72250affb5f300e0891c4170e38a1071a6e6181b

Changelog-entry: conf/machine: Remove machine includes
Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8m-var-dart.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8m-var-dart.conf
@@ -10,5 +10,5 @@
 
 MACHINEOVERRIDES = "imx8mq-var-dart:${MACHINE}"
  
-include conf/machine/imx8mq-var-dart.inc
+include conf/machine/imx8mq-var-dart.conf
 
