--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart.conf
@@ -3,3 +3,5 @@
 ##@DESCRIPTION: Machine configuration for the imx8mm-var-dart-nrt
 
 include conf/machine/imx8mm-var-dart.inc
+
+SERIAL_CONSOLES = "115200;ttymxc0"
