Add CycloneDX SBOM and VEX generation
https://balena.fibery.io/Work/Project/balenaos-SBOM-as-release-asset-1515

Changelog-entry: Generate SBOM and VEX (cycloneDX)
Signed-off-by: Edwin Joassart <edwin.joassart@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/samples/bblayers.conf.sample
+++ b/layers/meta-balena-imx8m-var-dart/conf/samples/bblayers.conf.sample
@@ -19,4 +19,5 @@ BBLAYERS ?= " \
     ${TOPDIR}/../layers/meta-openembedded/meta-perl \
     ${TOPDIR}/../layers/meta-freescale \
     ${TOPDIR}/../layers/meta-variscite-bsp \
-"
+    ${TOPDIR}/../layers/meta-cyclonedx  \
+    "
