--- a/layers/meta-balena-imx8m-var-dart/conf/samples/local.conf.sample
+++ b/layers/meta-balena-imx8m-var-dart/conf/samples/local.conf.sample
@@ -67,3 +67,6 @@ HOSTTOOLS:remove = "cc"
 HOSTTOOLS += "docker iptables"
 
 ACCEPT_FSL_EULA = "1"
+
+# CycloneDX SBOM and VEX generation
+INHERIT += "cyclonedx-export"
