--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,7 @@
 	path = layers/meta-variscite-bsp
 	url = https://github.com/varigit/meta-variscite-bsp.git
 	branch = kirkstone
+[submodule "layers/meta-cyclonedx"]
+	path = layers/meta-cyclonedx
+	url = https://github.com/balena-os/meta-cyclonedx
+	branch = kirkstone
