conf/machine: Switch to using upstream yocto machines
because the vars we need to change can be overriden
or unset from the device layer.

Signed-off-by: Alexandru Costache <alexandru@balena.io>

--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-som.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-som.conf
@@ -3,6 +3,6 @@
 ##@DESCRIPTION: Machine configuration for the imx8mm-var-som
 
 MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
-include conf/machine/imx8mm-var-dart.inc
+include conf/machine/imx8mm-var-dart.conf
 
 SERIAL_CONSOLES:imx8mm-var-som = "115200;ttymxc3"
