--- a/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-plt.conf
+++ b/layers/meta-balena-imx8m-var-dart/conf/machine/imx8mm-var-dart-plt.conf
@@ -3,5 +3,4 @@
 ##@DESCRIPTION: Machine configuration for the imx8mm-var-dart-plt
 
 MACHINEOVERRIDES = "imx8mm-var-dart:${MACHINE}"
-include conf/machine/imx8mm-var-dart.inc
-
+include conf/machine/imx8mm-var-dart.conf
