--- a/.github/workflows/imx8mm-var-dart.yml
+++ b/.github/workflows/imx8mm-var-dart.yml
@@ -50,6 +50,12 @@ jobs:
     secrets: inherit
     with:
       machine: imx8mm-var-dart
+      test_matrix: >
+        {
+          "test_suite": ["os","cloud","hup"],
+          "environment": ["bm.balena-dev.com"],
+          "runs_on": [["ubuntu-latest"]]
+        }
       # Allow manual workflow runs to force finalize without checking previous test runs
       force-finalize: ${{ inputs.force-finalize || false }}
       # Default to balena-staging.com for workflow dispatch, but balena-cloud.com for other events
